Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#237 closed bug (fixed)

user debugger doesn't take signal handlers into account

Reported by: axeld Owned by: bonefish
Priority: normal Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

When an unexpected_exception() occurs, the user debugger is invoked first, and only if it let the program running a signal is sent. If the application had a signal handler installed for the signal, it's not called. Tested with VLC 0.7.2 and hrev16543 - it crashes on startup (invalid opcode exception). If the user_debug_exception_occured() call is commented out, the signal handler is called correctly (but VLC hangs afterwards somewhere, but that should be another issue :-)).

Change History (3)

comment:1 by bonefish, 19 years ago

Status: newclosed

comment:2 by bonefish, 19 years ago

Fixed in revision 16556. user_debug_exception_occured() now checks whether a non-default handler is installed for the signal before installing a debugger.

comment:3 by bonefish, 19 years ago

Resolution: fixed
Note: See TracTickets for help on using tickets.