user_debug_exception_occurred() now checks whether a non-default signal action has been set for the signal. If so, it doesn't try to install a debugger, but simply lets the caller deliver the signal. Fixes bug #237 (VLC entering the debugger when checking for processor extensions).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16556 a95241bf-73f2-0310-859d-f6bbb57e9c96